# controllers/family.js
@@ -42,62 +42,62 @@ const createNewFamily = async (req, res) => {
   }
 };
 
-// const updateById = async (req, res) => {
-//   try {
-//     const result = await mongodb
-//       .getDb()
-//       .db('contacts')
-//       .collection('contacts')
-//       .updateOne(
-//         { _id: ObjectId(req.params.id) },
-//         {
-//           $set: {
-//             favoriteColor: req.body.favoriteColor
-//           }
-//         }
-//       );
-//     console.log('Your update has been successful');
-//     res.setHeader('Content-Type', 'application/json');
-//     res.status(204).json(result);
-//   } catch (err) {
-//     res.status(500).json(response.error || 'Some error occurred while updating the contact.');
-//   }
-// };
+const updateById = async (req, res) => {
+  try {
+    const result = await mongodb
+      .getDb()
+      .db()
+      .collection('family')
+      .updateOne(
+        { _id: ObjectId(req.params.id) },
+        {
+          $set: {
+            favoriteColor: req.body.favoriteColor
+          }
+        }
+      );
+    console.log('Your update has been successful');
+    res.setHeader('Content-Type', 'application/json');
+    res.status(204).json(result);
+  } catch (err) {
+    res.status(500).json(response.error || 'Some error occurred while updating the family.');
+  }
+};
 
-// const deleteById = async (req, res) => {
-//   try {
-//     const result = await mongodb
-//       .getDb()
-//       .db('contacts')
-//       .collection('contacts')
-//       .deleteOne({ _id: ObjectId(req.params.id) });
-//     console.log('The contact was Deleted');
-//     res.setHeader('Content-Type', 'application/json');
-//     res.status(200).json(result);
-//   } catch (err) {
-//     res.status(500).json(response.error || 'Some error occurred while deleting the contact.');
-//   }
-// };
+const deleteById = async (req, res) => {
+  try {
+    const result = await mongodb
+      .getDb()
+      .db()
+      .collection('family')
+      .deleteOne({ _id: ObjectId(req.params.id) });
+    console.log('The contact was Deleted');
+    res.setHeader('Content-Type', 'application/json');
+    res.status(200).json(result);
+  } catch (err) {
+    res.status(500).json(response.error || 'Some error occurred while deleting the family.');
+  }
+};
 
-// const deleteManyByName = async (req, res) => {
-//   try {
-//     const result = await mongodb
-//       .getDb()
-//       .db('contacts')
-//       .collection('contacts')
-//       .deleteMany({ firstName: req.body.firstName });
-//     res.setHeader('Content-Type', 'application/json');
-//     res.status(200).json(result);
-//   } catch (err) {
-//     res.status(500).json(response.error || 'Some error occurred while deleting the many contacts.');
-//   }
-// };
+const deleteManyByName = async (req, res) => {
+  try {
+    const result = await mongodb
+      .getDb()
+      .db()
+      .collection('family')
+      .deleteMany({ firstName: req.body.firstName });
+    res.setHeader('Content-Type', 'application/json');
+    res.status(200).json(result);
+  } catch (err) {
+    res.status(500).json(response.error || 'Some error occurred while deleting the many families.');
+  }
+};
 
 module.exports = {
   getData,
   getSingle,
-  createNewFamily
-  //   updateById,
-  //   deleteById,
-  //   deleteManyByName
+  createNewFamily,
+  updateById,
+  deleteById,
+  deleteManyByName
 };
