# controllers/user.js
@@ -40,62 +40,61 @@ const createNewUser = async (req, res) => {
   }
 };
 
-// const updateById = async (req, res) => {
-//   try {
-//     const result = await mongodb
-//       .getDb()
-//       .db('contacts')
-//       .collection('contacts')
-//       .updateOne(
-//         { _id: ObjectId(req.params.id) },
-//         {
-//           $set: {
-//             favoriteColor: req.body.favoriteColor
-//           }
-//         }
-//       );
-//     console.log('Your update has been successful');
-//     res.setHeader('Content-Type', 'application/json');
-//     res.status(204).json(result);
-//   } catch (err) {
-//     res.status(500).json(response.error || 'Some error occurred while updating the contact.');
-//   }
-// };
+const updateById = async (req, res) => {
+  try {
+    const result = await mongodb;
+    await mongodb
+      .getDb()
+      .db()
+      .collection('user')
+      .updateOne(
+        { _id: ObjectId(req.params.id) },
+        {
+          $set: {
+            favoriteColor: req.body.favoriteColor
+          }
+        }
+      );
+    console.log('Your update has been successful');
+    res.setHeader('Content-Type', 'application/json');
+    res.status(204).json(result);
+  } catch (err) {
+    res.status(500).json(response.error || 'Some error occurred while updating the user.');
+  }
+};
 
-// const deleteById = async (req, res) => {
-//   try {
-//     const result = await mongodb
-//       .getDb()
-//       .db('contacts')
-//       .collection('contacts')
-//       .deleteOne({ _id: ObjectId(req.params.id) });
-//     console.log('The contact was Deleted');
-//     res.setHeader('Content-Type', 'application/json');
-//     res.status(200).json(result);
-//   } catch (err) {
-//     res.status(500).json(response.error || 'Some error occurred while deleting the contact.');
-//   }
-// };
+const deleteById = async (req, res) => {
+  try {
+    const result = await mongodb;
+    await mongodb
+      .getDb()
+      .db()
+      .collection('user')
+      .deleteOne({ _id: ObjectId(req.params.id) });
+    console.log('The contact was Deleted');
+    res.setHeader('Content-Type', 'application/json');
+    res.status(200).json(result);
+  } catch (err) {
+    res.status(500).json(response.error || 'Some error occurred while deleting the user.');
+  }
+};
 
-// const deleteManyByName = async (req, res) => {
-//   try {
-//     const result = await mongodb
-//       .getDb()
-//       .db('contacts')
-//       .collection('contacts')
-//       .deleteMany({ firstName: req.body.firstName });
-//     res.setHeader('Content-Type', 'application/json');
-//     res.status(200).json(result);
-//   } catch (err) {
-//     res.status(500).json(response.error || 'Some error occurred while deleting the many contacts.');
-//   }
-// };
+const deleteManyByName = async (req, res) => {
+  try {
+    const result = await mongodb;
+    await mongodb.getDb().db().collection('user').deleteMany({ firstName: req.body.firstName });
+    res.setHeader('Content-Type', 'application/json');
+    res.status(200).json(result);
+  } catch (err) {
+    res.status(500).json(response.error || 'Some error occurred while deleting the many users.');
+  }
+};
 
 module.exports = {
   getData,
   getSingle,
-  createNewUser
-  //   updateById,
-  //   deleteById,
-  //   deleteManyByName
+  createNewUser,
+  updateById,
+  deleteById,
+  deleteManyByName
 };
